perf: reflections